--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,6 +12,9 @@ jobs:
       - name: Check out
         uses: actions/checkout@v2
 
+      - name: Install Git
+        run: sudo apt-get install -y git
+
       - name: Install Emacs
         uses: purcell/setup-emacs@master
         with:
